Finish static first draft of website

--- a/index.html
+++ b/index.html
@@ -1,7 +1,39 @@
 <html lang="en-US">
+<head>
+    <title>Grocery Prep</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body>
     <header>
         <h1>Grocery Prep</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About the Chefs</a>
+        </nav>
     </header>
+    <main>
+        <h1>Welcome to Grocery Prep</h1>
+        <p> Jesse and Daly's Keto Recipies</p>
+
+        <h1>Recipes</h1>
+        <section>
+            <h2>Breakfasts</h2>
+            <div class="showcase">
+                <div class="links">
+                    <a href="recipes/chorizo_omelet.html">Chorizo Omelet</a><br>
+                </div>
+                <img src="imgs/Chorizo_Omelette.jpg" height="200">
+            </div>
+
+            <h2>Dinners</h2>
+            <div class="showcase">
+                <div class="links">
+                    <a href="recipes/cast_iron_ribeye.html">Cast Iron Ribeye</a><br>
+                    <a href="recipes/pressure_cooked_artichoke.html">Pressure Cooked Artichoke</a><br>
+                </div>
+                <img src="imgs/Ribeye_Steak.jpg" height="200">
+            </div>
+    </main>
 </body>
 </html>
