--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>Grocery Prep</h1>
         <nav>
             <a href="index.html">Home</a>
+            <a href="random.html">Random Recipe</a>
             <a href="about.html">About the Chefs</a>
         </nav>
     </header>
