adding servings to all recipes, updates index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 
         <h1>Recipes</h1>
         <section>
+            <h2>Sauces</h2>
+            <div class="showcase">
+                <div class="links">
+                    <a href="recipes/salsa.html">Salsa</a><br>
+                </div>
+                <img src="imgs/Salsa.jpg" height="200">
+            </div>
+
             <h2>Breakfasts</h2>
             <div class="showcase">
                 <div class="links">
