--- a/recipes/chorizo_omelet.html
+++ b/recipes/chorizo_omelet.html
@@ -17,31 +17,46 @@
     <h1>Chorizo Omelette</h1>
 
     <div class="showcase">
-      <div class="desc">
-        <p>Tasty brunch</p>
+      <div class="info">
+        <div class="desc">
+          <p>Tasty brunch</p>
+        </div>
+
+        <div class="servings">
+          <h3>Servings</h3>
+          <button id="dec">-</button>
+          <span id="serving-count">1</span>
+          <button id="inc">+</button>
+        </div>
       </div>
+
       <img src="../imgs/Chorizo_Omelette.jpg" height="250">
     </div>
 
     <h2>Ingredients</h2>
     <ul>
-      <li>4 eggs</li>
-      <li>1 tbsp salt</li>
-      <li>1 tsp pepper</li>
-      <li>1 tbsp canola oil</li>
+      <li><span class="count">4</span> eggs</li>
+      <li><span class="count">1</span> pack of chorizo</li>
+      <li><span class="count">2</span> oz of onion</li>
+      <li><span class="count">2</span> oz of mushrooms</li>
+      <li><span class="count">1</span> tsp salt</li>
+      <li><span class="count">1</span> tsp pepper</li>
     </ul>
 
     <h2>Instructions</h2>
     <ol>
-        <li>Season ribeye with salt and pepper on both sides</li>
-        <li>Allow ribeye to sit for 30-60 minutes</li>
-        <li>Pre-heat oven to 350 deg</li>
-        <li>Heat cast iron with oil on high</li>
-        <li>Place ribeye on cast iron once oil starts to smoke</li>
-        <li>Sear for 2 minutes per side</li>
-        <li>Place cast iron in oven for 6 minutes</li>
-        <li>Remove from oven and allow to rest in pan for 10 minutes</li>
+        <li>Beat eggs in a bowl and add salt and pepper</li>
+        <li>Dice onion and mushrooms</li>
+        <li>Pre-heat skillet on medium heat and add chorizo</li>
+        <li>Cook chorize for about 5-10 minutes</li>
+        <li>Add onion and mushrooms and cook an additional few minutes</li>
+        <li>Lower heat, add beat eggs and gently mix all ingredients together</li>
+        <li>Cover the pan and cook until the mixture appears mostly solidified</li>
+        <li>Remove cover and gently fold omelette in half</li>
+        <li>Cook a minute or two more and then serve</li>
     </ol>
   </main>
+
+  <script src="../recipe.js"></script>
 </body>
 </html>
