fixing misspelled chorizo_omelette file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>Breakfasts</h2>
             <div class="showcase">
                 <div class="links">
-                    <a href="recipes/chorizo_omelet.html">Chorizo Omelet</a><br>
+                    <a href="recipes/chorizo_omelette.html">Chorizo Omelet</a><br>
                 </div>
                 <img src="imgs/Chorizo_Omelette.jpg" height="200">
             </div>
